--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pocket Toxic BF - Satirical Parody</title>
+    <title>Pocket Techie - Grow your own tech bro</title>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Pocket Techie - You don't even know how to code" />
-    <meta property="og:description" content="A satirical parody app featuring a pocket-sized techie companion" />
+    <meta property="og:title" content="Pocket Techie -  Grow your own tech bro" />
+    <meta property="og:description" content="A pocket-sized techie companion" />
     <meta property="og:image" content="/thumbnail.png" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Pocket Techie - You don't even know how to code" />
-    <meta name="twitter:description" content="A satirical parody app featuring a pocket-sized techie companion" />
+    <meta name="twitter:title" content="Pocket Techie - Grow your own tech bro" />
+    <meta name="twitter:description" content="A pocket-sized techie companion" />
     <meta name="twitter:image" content="/thumbnail.png" />
   </head>
   <body>
